# hafnium

inc/hf/: vcpu.h
inc/hf/arch/: init.h  other_world.h
kokoro/: test_spmc.sh
src/: api.c  cpu.c  init.c  load.c  main.c
src/arch/aarch64/: mm.c
src/arch/aarch64/hypervisor/: handler.c  other_world.c  psci_handler.c
src/arch/aarch64/inc/hf/arch/: spmd_helpers.h
src/arch/aarch64/qemuloader/: BUILD.gn
test/hftest/: BUILD.gn  hftest.py  qemu_standalone_main_secure.c
test/vmapi/: BUILD.gn  qemu-spmc.dts
test/vmapi/ffa_secure_partition_only/: BUILD.gn  qemu-partition-manifest.dts  secure_partition.c
